Fixed tm emblem showing on mobile

--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ main {
   .nav-item:nth-child(6),
   .nav-item:nth-child(7),
   .nav-item:nth-child(8),
-  .nav-item:nth-child(9) {
+  .nav-item:nth-child(9),
+  .nav-item:last-child {
     display: none;
   }
 
